Added /healthz endpoint
With a stub implementation in server.go
